# NumericalAlgorithms

./: LICENSE  NumericAlgorithms.cabal  NumericalOptimizations.cabal  README.md
Numeric/: Eigenvalue.hs  NumericTypes.hs  Optimizations.hs  Utilities.hs
Numeric/Eigenvalue/: JacobiMethod.hs  JacobiMethodST.hs
Numeric/Optimizations/: LinearAlgebra.hs  Tools.hs  TypesOptimization.hs  Unconstrained.hs
Numeric/Optimizations/LinearAlgebra/: Inverse.hs  Jacobi.hs
Numeric/Optimizations/Unconstrained/: BFGS.hs  ConjugateGradients.hs  LBFGS.hs  Optimization.hs  WolfeCondition.hs
Numeric/Utilities/: GaussElimination.hs  Tools.hs
src/: BFGS.hs  ConjugateGradients.hs  L-BFGS.hs  Optimization.hs  Tools.hs  TypesOptimization.hs
src/Unconstrained/: BFGS.hs  L-BFGS.hs  LBFGS.hs  Optimization.hs  Tools.hs  TypesOptimization.hs  WolfeCondition.hs
