
name:                NumericalOptimizations
version:             0.1.0.0
synopsis:            Numerical Algorithms Using the Repa and Vector Libraries. 

description:         Numerical Algortihms are important in numerous fields,and its enormous importance is testified by the amount of time spent optimizing the libraries in C and Fortran, where composibility and legibility is usually sacrificed to increase performance, chaning all the client applications to monolith and obscure codes. Pure Haskell implementation of these functions stands as a safe and fast alternative to create composable tools.

license:             BSD3
license-file:        LICENSE
author:              Felipe Zapata
maintainer:          tifonzafel@gmail.com
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10

Flag Debug
    Description: Enable debug support
    Default:False


Library
  Build-Depends:
        base 
       ,Cabal           
       ,containers
       -- ,monad-memo
       ,repa            
       ,repa-algorithms 
       ,vector          
       ,vector-algorithms
        

  ghc-options:
    -Odph
    -rtsopts
    -fno-liberate-case
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000
    -fllvm
    -optlo-O3
    -threaded

  other-extensions:
        BangPatterns
        ViewPatterns

  Exposed-modules:
        Numeric.Optimizations
        Numeric.Eigenvalue
        Numeric.Utilities

  default-language:    Haskell2010




